--- a/event.html
+++ b/event.html
@@ -38,7 +38,7 @@
                 }
             </script>
             <a herf="https://stell8520.github.io/event.html">Event</a>
-            <img src="imgs/image.jpg"></img>
+            <img src="imgs/images.jpg"></img>
         </body>
     </head>
 </html>
