--- a/event.html
+++ b/event.html
@@ -39,6 +39,7 @@
             </script>
             <a herf="https://stell8520.github.io/event.html">Event</a>
             <img src="img/images.jpg"></img>
+            <img src="img/images2.jpg"></img>
         </body>
     </head>
 </html>
