--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body style="margin:0px;background-color:#eeeeee;">
 	  <div class="content">
 	  <div class="box">
-	  <img src="my picture2.jpg" width="250 "/></div>
+		<iframe src="https://drive.google.com/file/d/1-LSseZVx6hq5ckw1-jhek-mm4FaQe-lc/preview" width="265" height="320"></iframe></div>
 	  <div class="box">
 	  <br/>
 	  <div class="box">
