--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 	  於是在我高中、大學時，會去尋找志工服務參加。
 	  <span class="keyword">願意幫助別人</span>的特質，讓我在求學路上交到了很多的益友。</div>
 	  <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;雖然我在技術層面上較薄弱，只有在大三時認識到基礎的網頁設計，但我會保持<span class="keyword">謙遜</span>並且<span class="keyword">尊敬</span>的態度努力向前輩們學習，
-	  我也相信我的特質可以符合這份工作，成為公司的助力，因此希望貴公司給我一個機會，謝謝！
+	  我也相信我的特質可以符合這份工作，成為公司的助力，因此希望貴公司給我一個機會，讓我加入這個團隊，謝謝！
 	  </div>
 	  </div>
 	  <div class="box2">
 	  <div class="title"><p/>未來規劃</div>
-	  <div>若順利進入貴公司，我會努力在3~6個月內透過公司培訓增進寫基礎網頁程式語言的能力。更加熟練之後，會再學習
-	  ASP.NET、C#等工具，以求精進。在此期間，也會不斷的更新有關網路行銷的資訊，自我學習。期望在未來能夠成為公司重要的一員，為公司及合作企業創造人性化設計的網頁。</div>
+	  <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若順利進入貴公司，我會努力在3~6個月內透過公司培訓增進寫基礎網頁程式語言的能力。熟練之後，會再學習
+	  ASP.NET、C#等工具，以求精進。在此期間，也會不斷的更新有關網路行銷的資訊，自我學習，並謹記公司樂於助人的經營理念。期望在未來能夠成為公司重要的一員，為公司及合作企業創造人性化設計的網頁。</div>
 	  </div>
 	  </div>
 </body>
