--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	user-scable=no" />
     <title> 履歷表 </title>
 	<style type="text/css">
-	.title{font-weight:bold;font-size:18px;}
+	.title{font-weight:bold;font-size:18px;text-align:center}
 	.content{width:800px;margin-left:auto;margin-right:auto;
 	background-color:white}
 	.keyword{font-weight:bold}
 	.box{
-	    width:350px;padding:10px;margin:10px;backgroung-color:white;
+	    width:350px;padding:10px;margin:8px;backgroung-color:white;
 		display:inline-block;vertical-align:top;
 		line-height:30px;position:relative;left:10px;
 	}
@@ -21,37 +21,45 @@
 	@media screen and (max-width:600px){
 	      .content{width:100%;}
 	}
+	#ellipse{width:120px;height:30px;
+	background: -webkit-radial-gradient(ellipse,white,orange);
+	background: -o-radial-gradient(ellipse,white,orange);
+	background: -moz-radial-gradient(ellipse,white,orange);
+	background: radial-gradient(ellipse,white,orange);}
+	
 	
 
 </style>
 </head>
-<body style="margin:0px;background-color:#eeeeee;">
+<body style="margin:0px;background-image: linear-gradient(to top, #d5dee7 0%, #ffafbd 0%, #c9ffbf 100%);">
 	  <div class="content">
+	  <div style="background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%)">
 	  <div class="box">
 		<iframe src="https://drive.google.com/file/d/1-LSseZVx6hq5ckw1-jhek-mm4FaQe-lc/preview" width="265" height="320"></iframe></div>
 	  <div class="box">
 	  <br/>
 	  <div class="box">
-	  <div class="title">伍麗君</div>
-	  <div>Email：Stelly51998@gmail.com</div>
-	  <div>手機：0968894315</div>
-	  <div>地址：新北市蘆洲區長安街249巷12之1號3樓</div>
+	  <div style="font-weight:bold;font-size:18px">伍麗君</div>
+	  <div style="font-weight:bold">Email：Stelly51998@gmail.com</div>
+	  <div style="font-weight:bold">手機：0968894315</div>
+	  <div style="font-weight:bold">地址：新北市蘆洲區長安街249巷12之1號3樓</div>
 	  <br/>
 	  <br/>
-	  <div style="font-weight:bold">應徵工作：【台北區】UI/UX網頁設計師<br>
-	  <div style="position:relative;left:95px">(前端工程師)</div></br></div>
+	  <div style="font-weight:bold;font-size:18px">應徵工作：【台北區】UI/UX網頁設計師<br>
+	  <div style="position:relative;left:100px">(前端工程師)</div></br></div>
 	  </div>
 	  </div>
 	  <hr/>
+	  </div>
 	  <div class="box2">
-	  <div class="title">學歷</div>
+	  <div class="title"><div id="ellipse">學歷</div></div>
 	  <ul>
         <li>2015/09~2020/06 國立臺灣大學森林環境暨資源學系</li>
         <li>2012/09~2015/06 臺北市立復興高級中學</li>
     </ul>
     </div>
     <div class="box2">
-    <div class="title">工作實習經驗</div>
+    <div class="title"><div id="ellipse">工作實習經驗</div></div>
     <ul>
         <li>2019/01、2019/07 林場實習
         <br>工廠參訪及實務操作。</br></li>
@@ -65,27 +73,26 @@
     </ul>
     </div>
     <div class="box2">
-    <div class="title">課外活動</div>
+    <div class="title"><div id="ellipse">課外活動</div></div>
     <ul>
         <li>2020/01~ 國產材設計比賽
-        <br>我的作品設計理念為設計出人性化的產品，從日常生活中會使用
-        的用品發想，目前在作品製作階段。</br></li>
+        <br>我的作品設計理念為設計出人性化的產品，從日常生活中會使用的用品發想，目前在作品製作階段。</br></li>
         <li>2018/09~2019/12 臺北市大安區老人日間照顧中心 | 服務志工
         <br>陪伴失智長輩，與他們聊天玩樂，學習穩定他們的情緒。</br></li>
-        <li>2018/10~2018~12 國立臺灣大學教務處教學發展中心 | 程式語言專班
-        <br>修習基礎入門的程式語言課程。</br></li>
+        <li><span class="keyword">2018/10~2018~12 國立臺灣大學教務處教學發展中心 | 程式語言專班
+        <br>修習基礎入門的程式語言課程。</br></span></li>
         <li>2015/01 以立國際服務 | 服務志工
         <br>在台東協助建造書屋(土磚屋)的地基以及修補石板屋屋頂。</br></li>
     </ul>
     </div>
     <div class="box2">
-    <div class="title">證照考試</div>
+    <div class="title"><div id="ellipse">證照考試</div></div>
     <ul>
         <li>2019/05 多益740分</li>
     </ul>
     </div>
     <div class="box2">
-    <div class="title">關於我</div>
+    <div class="title"><div id="ellipse">關於我</div></div>
     <div><p/>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我是在單親家庭下長大的孩子，爸爸在我小學四年級去世，
 	  所以家中經濟來源只有靠媽媽加班工作的薪水來負擔。
@@ -106,8 +113,8 @@
 	  </div>
 	  </div>
 	  <div class="box2">
-	  <div class="title"><p/>未來規劃</div>
-	  <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若順利進入貴公司，我會努力在3~6個月內透過公司培訓增進寫基礎網頁程式語言的能力。熟練之後，會再學習
+	  <div class="title"><div id="ellipse">未來規劃</div></div>
+	  <div><p/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若順利進入貴公司，我會努力在3~6個月內透過公司培訓增進寫基礎網頁程式語言的能力。熟練之後，會再學習
 	  ASP.NET、C#等工具，以求精進。在此期間，也會不斷的更新有關網路行銷的資訊，自我學習，並謹記公司樂於助人的經營理念。期望在未來能夠成為公司重要的一員，為公司及合作企業創造人性化設計的網頁。</div>
 	  </div>
 	  </div>
