--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 </style>
 </head>
-<body style="margin:0px;background-image: linear-gradient(to top, #d5dee7 0%, #ffafbd 0%, #c9ffbf 100%);">
+<body style="margin:0px;background-color:#eeeeee;">
 	  <div class="content">
-	  <div style="background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%)">
+	  <div style="background-image: linear-gradient(to top, #1e90ff 0%, #e0ffff 0%, #87cefa 100%);">
 	  <div class="box">
 		<iframe src="https://drive.google.com/file/d/1-LSseZVx6hq5ckw1-jhek-mm4FaQe-lc/preview" width="265" height="320"></iframe></div>
 	  <div class="box">
