--- a/index.html
+++ b/index.html
@@ -63,13 +63,28 @@
     <ul>
         <li>2019/01、2019/07 林場實習
         <br>工廠參訪及實務操作。</br></li>
-        <li>2017/07~2018/07 國立臺灣大學心理學系 | 大學生助理
+        <li>2017/07~2018/07 國立臺灣大學心理學系&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;大學生助理
         <br>協助紙本資料e化、進行資料核對及資料整理等項目。</br></li>
-        <li>2015/09~2020/06 國立臺灣大學總務處教職員住宿服務組 | 工讀生
+        <li>2015/09~2020/06 國立臺灣大學總務處教職員住宿服務組&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;工讀生
         <br>協助紙本資料e化、進行資料核對及資料整理等項目。</br></li>
-        <li>2012/09~2015/06 臺北市立復興高級中學 | 圖書館工讀生
+        <li>2012/09~2015/06 臺北市立復興高級中學&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;圖書館工讀生
         <br>協助借還書，圖書整理等。</br>
         </li> 
+    </ul>
+    </div>
+	<div class="box2">
+    <div class="title"><div id="ellipse">興趣</div></div>
+    <ul>
+    <div>閱讀、旅遊、木作</div>
+    </ul>
+	</div>
+	<div class="box2">
+    <div class="title"><div id="ellipse">專長</div></div>
+    <ul>
+        <li>文書處理
+        <br># Word&nbsp;&nbsp;# Powerpoint&nbsp;&nbsp;# Excel&nbsp;&nbsp;</br></li>
+        <li>3D繪圖
+        <br># Sketch Up&nbsp;&nbsp;# Autodesk fusion 360</br></li> 
     </ul>
     </div>
     <div class="box2">
@@ -77,11 +92,11 @@
     <ul>
         <li>2020/01~ 國產材設計比賽
         <br>我的作品設計理念為設計出人性化的產品，從日常生活中會使用的用品發想，目前在作品製作階段。</br></li>
-        <li>2018/09~2019/12 臺北市大安區老人日間照顧中心 | 服務志工
+        <li>2018/09~2019/12 臺北市大安區老人日間照顧中心&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;服務志工
         <br>陪伴失智長輩，與他們聊天玩樂，學習穩定他們的情緒。</br></li>
-        <li><span class="keyword">2018/10~2018~12 國立臺灣大學教務處教學發展中心 | 程式語言專班
+        <li><span class="keyword">2018/10~2018~12 國立臺灣大學教務處教學發展中心&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;程式語言專班
         <br>修習基礎入門的程式語言課程。</br></span></li>
-        <li>2015/01 以立國際服務 | 服務志工
+        <li>2015/01 以立國際服務&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;服務志工
         <br>在台東協助建造書屋(土磚屋)的地基以及修補石板屋屋頂。</br></li>
     </ul>
     </div>
@@ -103,7 +118,7 @@
 	  讓我可以支付學雜費與日常開銷，減輕家裡經濟壓力。遇到這些的困難，
 	  使我比同齡的同學較為<span class="keyword">內向成熟</span>，
 	  也較具有<span class="keyword">抗壓性</span>，養成了我
-	  <span class="keyword">獨立且樂觀</span>的性格。
+	  <span class="keyword">獨立、負責且樂觀</span>的性格。
 	  這樣的個性讓我在求學期間不會因為受到課業上的挫折而感到有壓力，
 	  反而會努力向上；也因為家裡遇到的困境，我們受到了社會機構的幫助，
 	  於是在我高中、大學時，會去尋找志工服務參加。
