--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <li>文書處理
         <br># Word&nbsp;&nbsp;# Powerpoint&nbsp;&nbsp;# Excel&nbsp;&nbsp;</br></li>
         <li>3D繪圖
-        <br># Sketch Up&nbsp;&nbsp;# Autodesk fusion 360</br></li> 
+        <br># Sketch Up&nbsp;&nbsp;# Autodesk Fusion 360</br></li> 
     </ul>
     </div>
     <div class="box2">
@@ -97,7 +97,7 @@
         <li><span class="keyword">2018/10~2018~12 國立臺灣大學教務處教學發展中心&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;程式語言專班
         <br>修習基礎入門的程式語言課程。</br></span></li>
         <li>2015/01 以立國際服務&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;服務志工
-        <br>在台東協助建造書屋(土磚屋)的地基以及修補石板屋屋頂。</br></li>
+        <br>在臺東協助建造書屋(土磚屋)的地基以及修補石板屋屋頂。</br></li>
     </ul>
     </div>
     <div class="box2">
